# tutorials_as_code

./: .gitignore  README  README.md  tasks
CodeSchool/tryR/: chap7.R
Confreaks/: README.md
Confreaks/AlohaRubyConf2012_10ThingsRuby/: 002_data_in_code.rb  013_pass_same_super.rb  016_pass_no_block_super.rb  024_case_on_ranges.rb  026_case_on_lambda.rb  027_formatted_inspect_sprintf.rb  033_unused_variable.rb  035_just_use_cycle.rb  040_autovivification_like_perl.rb  061_mixin_expression.rb  064_dont_inherit_struct.rb  069_iterate_over_specific_type.rb  070_count_objects.rb  076_between_two_tests_in_one.rb  089_worlds_easy_db.rb  096_out_of_order_code.sh
Confreaks/DenverRubyConf2012_GrowUnixBeard/: c01_if_fork.rb
Confreaks/RailsConf2013/: PRY_TheGoodParts.md
Google/: README
Google/google_python_class/: README  day02_eg01.py
MarakanaTechTV/: README.md
MarakanaTechTV/GitFromTheBitsUp/: git.me
MarakanaTechTV/PaulIrishOnWebAppDevWorkflow/: README.md
codeschool/: README
codeschool/R/: README  (+8 more)
confreaks/: README.md
misc_sources/: ProjectsToTry.md  README  README.md
talks-articles/: ProjectsToTry.md  README.md
talks-articles/languages-n-runtimes/rust/book-zero2prod/sample-project/: Cargo.toml
talks-articles/languages-n-runtimes/rust/book-zero2prod/sample-project/src/: main.rs  server.rs
talks-articles/languages-n-runtimes/rust/book-zero2prod/sample-project/tests/: test_api_health.rs
talks-articles/www/webassembly/rust/mozilla-rust-to-wasm/hello-wasm/: Cargo.toml
talks-articles/www/webassembly/rust/mozilla-rust-to-wasm/hello-wasm/src/: lib.rs
(+1812 files in other folders)
